--- a/ipumsr_webinar.Rmd
+++ b/ipumsr_webinar.Rmd
@@ -321,8 +321,6 @@ ipums has grown substantially since its first beta release in 1993,
 
 started with **US census data** has grown to include 9 collections
 
-*mostly just segueing to projects*
-
 
 ---
 # 
@@ -340,6 +338,19 @@ started with **US census data** has grown to include 9 collections
 
 ???
 
+---
+
+# 
+![IPUMS US Project logo](images/usa.jpg)
+
+--
+
+- “Historical Trends in Children Living in Multigenerational Households in the United States: 1870–2018” 
+- Natasha V. Pilkauskas, Mariana Amorim, and Rachel E. Dunifon
+
+![Trends in multigenerational households by income level and race/ethnicity](images/example_usa1.png)
+
+???
 
 
 
@@ -354,6 +365,126 @@ started with **US census data** has grown to include 9 collections
 - Monthly labor force surveys and supplements.
 
 - https://cps.ipums.org/cps/
+
+
+---
+# 
+![IPUMS Health Surveys project logo](images/health.jpg)
+
+
+--
+
+
+- Health **survey** data from the National Health Interview Survey (NHIS) from the 1960s to the present and the Medical Expenditure Panel Survey (MEPS) from 1996.
+
+- Supplements on cost of healthcare.
+
+- https://healthsurveys.ipums.org/
+???
+
+
+
+
+---
+# 
+![IPUMS Health Surveys project logo](images/health.jpg)
+
+
+--
+
+
+- “Hearing Impairment, Household Composition, Marital Status, and Mortality Among U.S. Adults” 
+
+- Justin T. Denney and Jason D. Boardman
+
+
+![Table showing correlation between hearing impairment and mortality](images/example_health1.png)
+
+
+???
+
+Looked at relationship between degrees of hearing impairment and mortality rates.
+
+---
+# 
+![IPUMS Higher Ed project logo](images/highered.jpg)
+
+--
+
+
+- Scientists and Engineers Statistical Data System (SESTAT), the leading surveys for studying the science and engineering (STEM) workforce in the United States
+
+- Data from the National Surveys of College Graduates (NSCG), Recent College Graduates (NSRCG) and Doctorate Recipients (SDR) are integrated from 1993 to the present.
+
+- https://highered.ipums.org/highered/
+
+
+---
+
+# 
+![IPUMS Time Use project logo](images/time_use.jpg)
+
+--
+
+- Historical and contemporary time use data from 1965 to the present.
+
+- Extensive time diary data from respondents in the US and *7* other countries.
+
+- https://timeuse.ipums.org/
+
+
+---
+# 
+![IPUMS Time Use project logo](images/time_use.jpg)
+
+- Nathan Yau of Flowing Data
+
+- http://flowingdata.com/projects/2015/timeuse-simulation/
+
+![visualization showing individual dots moving between activities](images/example_time_use.png)
+
+
+---
+# 
+![IPUMS NHGIS project logo](images/nhgis.jpg)
+
+
+--
+
+- Summary tables and time series of population, housing, agriculture, and economic data 
+
+- GIS Shapefiles for all levels of US geography, including tracts, from 1790 to the present
+
+- https://www.nhgis.org/
+
+
+
+
+---
+# 
+![IPUMS NHGIS project logo](images/nhgis.jpg)
+
+.pull-left[
+- “Migrant Selection and Sorting during the Great American Drought.” 
+- Christopher Sichko
+]
+
+.pull-right[
+
+![map showing extent of drought](images/example_nhgis1.png)
+
+]
+
+![Maps showing individual educational attainment by region](images/example_nhgis2.png)
+
+---
+
+# 
+![IPUMS IHGIS project logo](images/ihgis.jpg)
+
+
+- https://ihgis.ipums.org/
+
 
 ---
 # 
@@ -377,6 +508,28 @@ started with **US census data** has grown to include 9 collections
 - https://international.ipums.org/international/
 
 
+
+---
+# 
+![IPUMS international project logo](images/int.jpg)
+
+--
+
+.pull-left[
+
+- “Climate-Induced migration and unemployment in middle-income Africa”
+
+- Valerie Mueller, Clark Gray, and Douglas Hopping
+]
+
+.pull-right[
+![Maps of migration, education, temperature, and precipitation for 3 counties.](images/example_international.png)
+]
+
+
+
+
+
 ---
 # 
 ![IPUMS Global Health project logo](images/dhs.jpg)
@@ -392,81 +545,32 @@ started with **US census data** has grown to include 9 collections
 - Performance Monitoring for Action (PMA) surveys
   - Focus on fertility, contraception, hygiene, and health
   - Administered frequently to monitor trends in select high-fertility countries.
-  - https://ipums.github.io/pma-data-hub/index.html#category:PMA_Publications
+  
+  - https://globalhealth.ipums.org/
 
-- https://globalhealth.ipums.org/
+---
+
+
+
+# 
+![IPUMS Global Health project logo](images/dhs.jpg)
+
+
+--
+
+.pull-left[
+![alluvial plot showing which individuals were using family planning at two points in time](images/example_global_health.png)
+]
+
+.pull-right[
+  - https://tech.popdata.org/pma-data-hub/
+]
 
 ???
 
-Check out Matt Gunther's blog using IPUMS Global Health Data
-
----
-# 
-![IPUMS Health Surveys project logo](images/health.jpg)
+Check out blog using IPUMS Global Health Data
 
 
---
-
-
-- Health **survey** data from the National Health Interview Survey (NHIS) from the 1960s to the present and the Medical Expenditure Panel Survey (MEPS) from 1996.
-
-- Supplements on cost of healthcare.
-
-- https://healthsurveys.ipums.org/
-???
-
-
----
-# 
-![IPUMS Higher Ed project logo](images/highered.jpg)
-
---
-
-
-- Scientists and Engineers Statistical Data System (SESTAT), the leading surveys for studying the science and engineering (STEM) workforce in the United States
-
-- Data from the National Surveys of College Graduates (NSCG), Recent College Graduates (NSRCG) and Doctorate Recipients (SDR) are integrated from 1993 to the present.
-
-- https://highered.ipums.org/highered/
-
-
----
-# 
-![IPUMS Time Use project logo](images/time_use.jpg)
-
---
-
-- Historical and contemporary time use data from 1965 to the present.
-
-- Extensive time diary data from respondents in the US and *7* other countries.
-
-- https://timeuse.ipums.org/
-
----
-# 
-![IPUMS NHGIS project logo](images/nhgis.jpg)
-
-
---
-
-- Summary tables and time series of population, housing, agriculture, and economic data 
-
-- GIS Shapefiles for all levels of US geography, including tracts, from 1790 to the present
-
-- https://www.nhgis.org/
-
-
----
-# 
-![IPUMS IHGIS project logo](images/ihgis.jpg)
-
---
-
-- **Summary** data tables from population and housing censuses as well as agricultural censuses from around the world
-
-- Integrated GIS **shapefiles.**
-
-- https://ihgis.ipums.org/
 
 ---
 
